# telemetry

./: README.md  config.toml  pyproject.toml
src/common/: classes.py  utils.py
src/daemon/: collectord.py  collectord.service  publisher.py
src/daemons/collector/: collectord.py
src/daemons/inxi/: inxid.py
src/daemons/testd/: testd.py
src/scripts/: inxi.py  test.py
src/utils/: utils.py
