[project]
name = "telemetry"
version = "0.1b"
description = "Automated telemetry data collection for radars."
authors = [
    {name = "Adam Lozinsky", email="adam.lozinsky@usask.ca"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"

keywords = ["telemetry", "radar", "daemons", "schedules", "engineering",
            "operations", "superdarncanada", "icebear", "borealis",
            "usask", "diagnostics"]

classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Operations',
    'License :: OSI Approved :: GNU General Public License v3',
    'Programming Language :: Python :: 3.11'
]

# Requirements: This is done differently by poetry!
dependencies = [
    "numpy",
    "opencv-python"
    "orjson"
]

[project.urls]
homepage = "https://telemetry.readthedocs.io"
documentation = "https://telemetry.readthedocs.io"
repository = "https://github.com/Lozzy-Bear/telemetry"

[project.scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py311']
include = ''
exclude = ''